Add theater update endpoint
