# api/docs/swagger.yaml
@@ -19,6 +19,17 @@ definitions:
     required:
     - name
     type: object
+  api.TheaterResponse:
+    properties:
+      created_at:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+      uuid:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -39,7 +50,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.TheaterRequest'
+              $ref: '#/definitions/api.TheaterResponse'
             type: array
         "400":
           description: Bad Request
@@ -74,9 +85,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/api.TheaterRequest'
-            type: array
+            $ref: '#/definitions/api.TheaterResponse'
         "400":
           description: Bad Request
           schema:
@@ -90,6 +99,47 @@ paths:
           schema:
             $ref: '#/definitions/api.HttpError'
       summary: Create theater
+      tags:
+      - theaters
+  /theaters/{uuid}:
+    put:
+      consumes:
+      - application/json
+      description: Update theater
+      operationId: TheatersUpdate
+      parameters:
+      - description: Theater UUID
+        format: uuid
+        in: path
+        name: uuid
+        required: true
+        type: string
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.TheaterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.TheaterResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.HttpError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.HttpError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.HttpError'
+      summary: Update theater
       tags:
       - theaters
 swagger: "2.0"
